--- a/source/RefactoringDeviceManager.vcxproj
+++ b/source/RefactoringDeviceManager.vcxproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <ClCompile Include="DialogueAbout.cpp" />
     <ClCompile Include="Enumerator.cpp" />
+    <ClCompile Include="EnumRes.cpp" />
     <ClCompile Include="KWnd.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="StatusBar.cpp" />
@@ -162,8 +163,10 @@
   <ItemGroup>
     <ClInclude Include="DialogueAbout.h" />
     <ClInclude Include="Enumerator.h" />
+    <ClInclude Include="EnumRes.h" />
+    <ClInclude Include="Global.h" />
     <ClInclude Include="KWnd.h" />
-    <ClInclude Include="Main.h" />
+    <ClInclude Include="Title.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="StatusBar.h" />
     <ClInclude Include="ToolBar.h" />
@@ -181,6 +184,11 @@
     <Image Include="bitmaps_app\toolbar.bmp" />
     <Image Include="Icons_App\app.ico" />
     <Image Include="Icons_App\books.ico" />
+    <Image Include="Icons_Resources\dma.ico" />
+    <Image Include="Icons_Resources\io.ico" />
+    <Image Include="Icons_Resources\irq.ico" />
+    <Image Include="Icons_Resources\large_memory.ico" />
+    <Image Include="Icons_Resources\memory.ico" />
     <Image Include="Icons_Service\closed.ico" />
     <Image Include="Icons_Service\closed_light.ico" />
     <Image Include="Icons_Service\opened.ico" />
