--- a/example_debug_framework/PlatformFramework.vcxproj.filters
+++ b/example_debug_framework/PlatformFramework.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="Task_22.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Task_23.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AppLib.h">
@@ -171,6 +174,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Task_22.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Task_23.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
