--- a/example_debug_framework/PlatformFramework.vcxproj.filters
+++ b/example_debug_framework/PlatformFramework.vcxproj.filters
@@ -96,6 +96,12 @@
     <ClCompile Include="Task_23.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Task_24.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="Task_25.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AppLib.h">
@@ -177,6 +183,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Task_23.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Task_24.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Task_25.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
