--- a/example_debug_framework/PlatformFramework.vcxproj.filters
+++ b/example_debug_framework/PlatformFramework.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="Task_25.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Task_50.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AppLib.h">
@@ -189,6 +192,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Task_25.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Task_50.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
