--- a/simple_test_compute_shader/read_write_copy_latency/GPUmem.vcxproj.filters
+++ b/simple_test_compute_shader/read_write_copy_latency/GPUmem.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CopyBenchmark.cpp">
+    <ClCompile Include="GPUmem.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
