compute shader sample v0.4.2 (GPU bandwidth) and v0.5.2 (GPU latency)

--- a/simple_test_compute_shader/GPU_LATENCY/GPUlatency.vcxproj.filters
+++ b/simple_test_compute_shader/GPU_LATENCY/GPUlatency.vcxproj.filters
@@ -16,7 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GPUlatency.cpp">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
