--- a/templates_masm_disk_avx512sort/ExampleSortingAVX512/ExampleSortingAVX512.vcxproj.filters
+++ b/templates_masm_disk_avx512sort/ExampleSortingAVX512/ExampleSortingAVX512.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="TaskWorkNetSort.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="DrawYX.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="AppGuiLib.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AppLib.h">
@@ -114,6 +120,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="TaskWorkNetSort.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="DrawYX.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="AppGuiLib.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
