updated Y=F(X) draw example with classes

--- a/templates_gui/DrawYXclass/DrawYXclass.vcxproj
+++ b/templates_gui/DrawYXclass/DrawYXclass.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{3214f73a-7329-44d0-a940-c5fcc562ffd1}</ProjectGuid>
+    <ProjectGuid>{862289b2-40cb-4eee-8fcc-7446bede0afd}</ProjectGuid>
     <RootNamespace>DrawYXclass</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -127,10 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AppGuiLib.cpp" />
     <ClCompile Include="DrawYX.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AppGuiLib.h" />
     <ClInclude Include="DrawYX.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
