--- a/templates_gui/DrawYXclass/DrawYXclass.vcxproj.filters
+++ b/templates_gui/DrawYXclass/DrawYXclass.vcxproj.filters
@@ -18,11 +18,17 @@
     <ClCompile Include="Main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="AppGuiLib.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
     <ClCompile Include="DrawYX.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AppGuiLib.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
     <ClInclude Include="DrawYX.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
