--- a/templates_gui/DrawYXclass_old/DrawYXclass.vcxproj.filters
+++ b/templates_gui/DrawYXclass_old/DrawYXclass.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClCompile Include="Main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="KWnd.cpp">
+    <ClCompile Include="AppGuiLib.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="DrawYX.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="KWnd.h">
+    <ClInclude Include="AppGuiLib.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="DrawYX.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
