--- a/templates_gui/DrawYXlibrary/DrawYXlibrary.vcxproj
+++ b/templates_gui/DrawYXlibrary/DrawYXlibrary.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{24cbd7c0-4c24-449e-97d2-a759939efd5c}</ProjectGuid>
-    <RootNamespace>DrawYX</RootNamespace>
+    <ProjectGuid>{eeb144d1-f5c1-4e59-ab9c-2a375fb79f91}</ProjectGuid>
+    <RootNamespace>DrawYXlibrary</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AppGuiLib.cpp" />
     <ClCompile Include="Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AppGuiLib.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
